--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Primer proyecto nodejs",
   "main": "index.js",
+  "development": true,
   "scripts": {
     "dev": "nodemon index.js"
   },
@@ -10,12 +11,14 @@
   "author": "Ricardo E.",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
     "pug": "^3.0.2",
     "sequelize": "^6.21.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "sequelize-cli": "^6.4.1"
   }
 }
